------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

March 08 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Smoke added 
	
March 7 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* A terrible bug in the door breaking code fixed

March 7 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Searching now works correctly
	* Restrictions of permanent states activated by fountain updated

March 07 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* added magpie
	
March 6 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Special monsters and items now determine their AttachedGod correctly
	* Terrains now also have AttachedGods (mostly depends on material)
	* Horn of fear is now much more powerful
	* Many unfinished things which I do not remember

February 28 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* When player is killed by something when he is fainting the death message now says "killed by a X while helpless".
	
February 28 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Polymorph question should default to the monster that the player last polymorphed to.

February 26 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Zombies are more picky about the brains they want (atleast that's what they say now)
	* Petrus's, angels' and genies' bodyparts disappear when severed.
	* Zombies pick up and use heads if they lack one

February 25 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added two-headed moose
	
February 24 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added ghosts

February 20 2003 Timo Kiviluoto <sonor@phpoint.fi> and
				 Heikki Sairanen<heikki.sairanen@phpoint.net>

	* All items, characters and materials have been attached to some god
