@@ -1941,10 +1941,10 @@ void character::SetNP(long What)
 
 void character::ShowNewPosInfo() const
 {
-  if(GetPos().X < game::GetCamera().X + 2 || GetPos().X >= game::GetCamera().X + game::GetScreenSize().X - 2)
+  if(GetPos().X < game::GetCamera().X + 3 || GetPos().X >= game::GetCamera().X + game::GetScreenSize().X - 3)
     game::UpdateCameraX();
 
-  if(GetPos().Y < game::GetCamera().Y + 2 || GetPos().Y >= game::GetCamera().Y + game::GetScreenSize().Y - 2)
+  if(GetPos().Y < game::GetCamera().Y + 3 || GetPos().Y >= game::GetCamera().Y + game::GetScreenSize().Y - 3)
     game::UpdateCameraY();
 
   game::SendLOSUpdateRequest();
@@ -1954,7 +1954,8 @@ void character::ShowNewPosInfo() const
     {
       if(GetLSquareUnder()->IsDark() && !game::SeeWholeMapCheatIsActive())
 	ADD_MESSAGE("It's dark in here!");
-
+      GetLSquareUnder()->ShowSmokeMessage();
+	
       ushort VisibleItemsOnGround = GetStackUnder()->GetVisibleItems(this);
 
       if(VisibleItemsOnGround > 0)
