@@ -9,6 +9,11 @@ is also provided AS IS and is probably completely unreadable.
 
 March 08 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
+	* Skunk added
+	* Smoke improved
+	
+March 08 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
 	* Smoke added 
 	
 March 7 2003 Timo Kiviluoto <sonor@phpoint.fi>
